[package]
name = "astroport-proxy"
version = "1.0.0"
authors = ["Crypto11"]
edition = "2018"
description = "A proxy to Astroport modules"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0" } 
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
astroport = "1.0.1"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-storage = { version = "0.16.0" }
astroport = "1.0.1"
